--- a/game/styles.css
+++ b/game/styles.css
@@ -1,12 +1,36 @@
 body {
-  overflow-x: scroll;
+  font-family: sans-serif;
+}
+
+.hidden {
+  display: none;
+}
+
+#vue {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.editor {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 #panes {
   position: relative;
   width: 640px;
   height: 480px;
-  display: inline-block;
 }
 
 #video {
@@ -18,6 +42,42 @@ body {
   position: absolute;
 }
 
-.hidden {
-  display: none;
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.menu-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 2px;
+}
+
+.menu-stack {
+  display: flex;
+  width: 240px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: auto;
+  border: 1px solid black;
+  margin-left: 2px;
+}
+
+.stack-item {
+  width: 160px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.stack-thumb {
+  max-width: 96px;
+  max-height: 96px;
 }
