--- a/game/styles.css
+++ b/game/styles.css
@@ -2,6 +2,11 @@ body {
   font-family: sans-serif;
 }
 
+hr {
+  border-top: 1px solid black;
+  width: 100%;
+}
+
 .hidden {
   display: none;
 }
@@ -11,6 +16,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: 960px;
 }
 
 .step-body {
@@ -20,23 +26,32 @@ body {
   justify-content: center;
 }
 
-.title {
+.title, .editor, .filter, .score {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+}
+
+.header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-start;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+.header h1 {
+  width: 75%;
+  text-align: center;
+  margin: 0;
 }
 
 .flow-button {
-  width: 100%;
+  flex: 1;
   padding: 8px;
-}
-
-.editor {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
 }
 
 .editor-body, .filter-body {
@@ -67,8 +82,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 240px;
-  margin-left: 2px;
+  margin-left: 8px;
   max-height: 100%;
 }
 
@@ -103,6 +117,10 @@ body {
   margin-bottom: 8px;
 }
 
+.filter-buttons {
+  margin-left: 8px;
+}
+
 .menu-stack {
   display: flex;
   width: 100%;
@@ -127,18 +145,4 @@ body {
 .stack-thumb {
   max-width: 96px;
   max-height: 96px;
-}
-
-.filter {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.score {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
 }
