--- a/game/styles.css
+++ b/game/styles.css
@@ -1,5 +1,11 @@
 body {
   font-family: sans-serif;
+  margin: 0;
+  min-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 hr {
@@ -9,10 +15,19 @@ hr {
 
 ul {
   list-style: square;
+  font-size: 2em;
+}
+
+li {
+  margin-bottom: 8px;
 }
 
 .hidden {
   display: none;
+}
+
+p {
+  max-width: 50vw;
 }
 
 #vue {
@@ -20,6 +35,7 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-width: 960px;
   max-width: 960px;
 }
 
@@ -28,6 +44,7 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .title, .editor, .filter, .score {
@@ -35,6 +52,7 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  width: 100%;
 }
 
 .header {
@@ -64,6 +82,7 @@ ul {
   align-items: flex-start;
   justify-content: center;
   max-height: 500px;
+  width: 100%;
 }
 
 #panes {
@@ -123,6 +142,7 @@ ul {
 
 .filter-buttons {
   margin-left: 8px;
+  flex: 1;
 }
 
 .menu-stack {
